--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "vue": "^3.2.27"
   },
   "devDependencies": {
+    "webpack-dev-server": "^4.7.4",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@vue/compiler-sfc": "^3.2.29",
     "babel-loader": "^8.2.3",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
-    "rollup": "^2.67.2",
     "jiti": "^1.12.9",
+    "rollup": "^2.67.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "vue-loader": "^17.0.0",
