--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@yz-ui/utils": "workspace:^1.0.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.27"
   },
   "devDependencies": {
-    "webpack-dev-server": "^4.7.4",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@vue/compiler-sfc": "^3.2.29",
@@ -29,6 +29,7 @@
     "typescript": "^4.5.5",
     "vue-loader": "^17.0.0",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.4"
   }
 }
